--- a/catagories.html
+++ b/catagories.html
@@ -1,12 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thiscordmerch Shop</title>
+    <link rel="stylesheet" href="assets/css/NavBar.css">
+    <link rel="stylesheet" href="assets/css/catagories.css">
+    <!--Import Bootstrap-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"></script>
+    <!--Import Google Icon-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-    
+    <!-- ------------------NavBar---------------------- -->
+    <ul id="SideNav" class="SideNav" style="width:0;">
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Clients</a></li>
+        <li id="SideCategories">
+            <nobr><a href="">Categories ▾</a></nobr>
+            <ul class="sideDropdown" id="SideCategoriesDrop">
+                <li><a href="#">Classic</a></li>
+                <li><a href="#">Country</a></li>
+                <li><a href="#">Jazz</a></li>
+                <li><a href="#">R&B</a></li>
+                <li><a href="#">Pop</a></li>
+            </ul>
+        </li>
+        <li><a href="javascript:closeNav()">Close</a></li>
+    </ul>
+
+    <div id="main">
+        <ul class="NavigationBar">
+            <li id="Cart"><a href="#cart">
+                    <i class="material-icons">shopping_cart</i>
+            <li id="Account"><a href="#account">
+                    <i class="material-icons">person</i>
+                </a></li>
+            <li id="More"><b><a href="#More">More ▾</a></b>
+                <ul class="dropdown" id="moreDrop">
+                    <li><a href="#">FAQ and Contract info</a></li>
+                </ul>
+            </li>
+            <li id="ShopAll"><b><a href="#ShopAll">ShopAll</a></b></li>
+            <li id="Categories"><b><a href="#Categories">Categories ▾</a></b>
+                <ul class="dropdown" id="categoriesDrop">
+                    <li><a href="#">Classic</a></li>
+                    <li><a href="#">Country</a></li>
+                    <li><a href="#">Jazz</a></li>
+                    <li><a href="#">R&B</a></li>
+                    <li><a href="#">Pop</a></li>
+                </ul>
+            </li>
+            <li id="New"><b><a href="#New">New</a></b></li>
+            <li id="Menu"><a href="#Menu" onclick="openNav()"><i class="material-icons">&#xe5d2;</i></a></li>
+            <li id="Icon"><a href="#Icon">Icon</a></li>
+        </ul>
+    </div>
+    <!-- ------------------NavBar---------------------- -->
+
+
+    <script src="assets/js/catagories.js"></script>
+    <script src="assets/js/NavBar.js"></script>
 </body>
+
 </html>
