--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thiscordmerch Shop</title>
+    <link rel="stylesheet" href="assets/css/NavBar.css">
     <link rel="stylesheet" href="assets/css/Home.css">
     <!--Import Bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
@@ -76,6 +77,7 @@
     </div>
 
     <script src="assets/js/Home.js"></script>
+    <script src="assets/js/NavBar.js"></script>
 </body>
 
 </html>
