--- a/product.html
+++ b/product.html
@@ -61,8 +61,30 @@
             <li id="Menu"><a href="#Menu" onclick="openNav()"><i class="material-icons">&#xe5d2;</i></a></li>
             <li id="Icon"><a href="#Icon">Icon</a></li>
         </ul>
+        <!-- ------------------NavBar---------------------- -->
+
+        <div class="product-container">
+            <div class="pic-product">
+                <div class="img-container">
+                    <img id="pic-record" src="/Thiscordmerch-Shop/assets/images/Product/recordTest.png" alt="name_record">
+                    <svg id="btn-p" onclick="musicOn()" width="22%" height="23%" viewBox="0 0 130 132" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <ellipse cx="65" cy="66" rx="65" ry="66" fill="#5964F2"/>
+                        <path d="M99 66L48.75 98.909L48.75 33.091L99 66Z" fill="white"/>
+                    </svg>
+                </div>
+            </div>
+            <div class="info-product">
+                <h1><b>Record Product Name</b></h1>
+                <h4 style="padding-top: 3%;">$ 10.00</h4>
+                <p style="padding-top: 1%;"><b>Description:</b> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem blanditiis explicabo laudantium libero incidunt consectetur qui, cupiditate consequuntur voluptatum quisquam et eius eveniet, nam eos tempore, officiis officia quae unde?</p>
+                <div class="addProduct-container">
+                    <button onclick="addProduct()" id="btn-addProduct">Add to Cart</button>
+                </div>
+            </div>
+            
+        </div>
     </div>
-    <!-- ------------------NavBar---------------------- -->
+    <!-- ------------------Product---------------------- -->
     
 
     <script src="assets/js/product.js"></script>
