--- a/Catagories/country.html
+++ b/Catagories/country.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thiscordmerch Shop</title>
-    <link rel="stylesheet" href="assets/css/NavBar.css">
-    <link rel="stylesheet" href="assets/css/Home.css">
+    <link rel="stylesheet" href="../assets/css/NavBar.css">
+    <link rel="stylesheet" href="../assets/css/Home.css">
     <!--Import Bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
@@ -26,11 +26,11 @@
         <li id="SideCategories">
             <nobr><a href="javascript:void(0)">Categories ▾</a></nobr>
             <ul class="sideDropdown" id="SideCategoriesDrop">
-                <li><a href="Catagories/classic.html">Classic</a></li>
-                <li><a href="Catagories/country.html">Country</a></li>
-                <li><a href="Catagories/jazz.html">Jazz</a></li>
-                <li><a href="Catagories/rb.html">R&B</a></li>
-                <li><a href="Catagories/pop.html">Pop</a></li>
+                <li><a href="classic.html">Classic</a></li>
+                <li><a href="country.html">Country</a></li>
+                <li><a href="jazz.html">Jazz</a></li>
+                <li><a href="rb.html">R&B</a></li>
+                <li><a href="pop.html">Pop</a></li>
             </ul>
         </li>
         <li><a href="#">All</a></li>
@@ -39,8 +39,8 @@
                 <li><a href="#">Credit</a></li>
             </ul>
         </li>
-        <li><a href="#account">Account</a></li>
-        <li><a href="cart.html">Cart</a></li>
+        <li><a href="#">Account</a></li>
+        <li><a href="../cart.html">Cart</a></li>
         <li><a href="javascript:closeNav()">Close</a></li>
     </ul>
     <!-- ---------------End--SideNavBar------------------- -->
@@ -48,9 +48,9 @@
     <div id="main">
         <!-- ------------------NavBar---------------------- -->
         <ul class="NavigationBar">
-            <li id="Cart"><a href="cart.html">
+            <li id="Cart"><a href="../cart.html">
                     <i class="material-icons">shopping_cart</i>
-            <li id="Account"><a href="#account">
+            <li id="Account"><a href="#">
                     <i class="material-icons">person</i>
                 </a></li>
             <li id="More"><b><a href="javascript:void(0)">More ▾</a></b>
@@ -61,21 +61,22 @@
             <li id="ShopAll"><b><a href="#ShopAll">All</a></b></li>
             <li id="Categories"><b><a href="javascript:void(0)">Categories ▾</a></b>
                 <ul class="dropdown" id="categoriesDrop">
-                    <li><a href="Catagories/classic.html">Classic</a></li>
-                    <li><a href="Catagories/country.html">Country</a></li>
-                    <li><a href="Catagories/jazz.html">Jazz</a></li>
-                    <li><a href="Catagories/rb.html">R&B</a></li>
-                    <li><a href="Catagories/pop.html">Pop</a></li>
+                    <li><a href="classic.html">Classic</a></li>
+                    <li><a href="country.html">Country</a></li>
+                    <li><a href="jazz.html">Jazz</a></li>
+                    <li><a href="rb.html">R&B</a></li>
+                    <li><a href="pop.html">Pop</a></li>
                 </ul>
             </li>
             <li id="Menu"><a href="javascript:void(0)" onclick="openNav()"><i class="material-icons">&#xe5d2;</i></a></li>
-            <li id="Icon"><a href="index.html">Thiscordmerch</a></li>
+            <li id="Icon"><a href="../index.html">Thiscordmerch</a></li>
         </ul>
         <!-- ------------------End--NavBar----------------- -->
-    
-    </div>
-    <script src="assets/js/cart.js"></script>
-    <script src="assets/js/NavBar.js"></script>
-</body>
 
+        <h2>Country</h2>
+    </div>
+    
+    <script src="../assets/js/Home.js"></script>
+    <script src="../assets/js/NavBar.js"></script>
+</body>
 </html>
