--- a/createAcc.html
+++ b/createAcc.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thiscordmerch Shop</title>
     <link rel="stylesheet" href="assets/css/NavBar.css">
-    <link rel="stylesheet" href="assets/css/createAcc.css">
+    <link rel="stylesheet" href="assets/css/Home.css">
     <!--Import Bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
@@ -15,56 +14,66 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"></script>
     <!--Import Google Icon-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import Font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <!-- ------------------NavBar---------------------- -->
+    <!-- ------------------SideNavBar--------------------- -->
     <ul id="SideNav" class="SideNav" style="width:0;">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Clients</a></li>
         <li id="SideCategories">
-            <nobr><a href="">Categories ▾</a></nobr>
+            <nobr><a href="javascript:void(0)">Categories ▾</a></nobr>
             <ul class="sideDropdown" id="SideCategoriesDrop">
-                <li><a href="#">Classic</a></li>
-                <li><a href="#">Country</a></li>
-                <li><a href="#">Jazz</a></li>
-                <li><a href="#">R&B</a></li>
-                <li><a href="#">Pop</a></li>
+                <li><a href="Catagories/classic.html">Classic</a></li>
+                <li><a href="Catagories/country.html">Country</a></li>
+                <li><a href="Catagories/jazz.html">Jazz</a></li>
+                <li><a href="Catagories/rb.html">R&B</a></li>
+                <li><a href="Catagories/pop.html">Pop</a></li>
             </ul>
         </li>
+        <li><a href="#">All</a></li>
+        <li id="SideMore"><nobr><a href="javascript:void(0)">More ▾</a></nobr>
+            <ul class="sideDropdown" id="SideMoreDrop">
+                <li><a href="#">Credit</a></li>
+            </ul>
+        </li>
+        <li><a href="#account">Account</a></li>
+        <li><a href="cart.html">Cart</a></li>
         <li><a href="javascript:closeNav()">Close</a></li>
     </ul>
+    <!-- ---------------End--SideNavBar------------------- -->
 
     <div id="main">
+        <!-- ------------------NavBar---------------------- -->
         <ul class="NavigationBar">
-            <li id="Cart"><a href="#cart">
+            <li id="Cart"><a href="cart.html">
                     <i class="material-icons">shopping_cart</i>
             <li id="Account"><a href="#account">
                     <i class="material-icons">person</i>
                 </a></li>
-            <li id="More"><b><a href="#More">More ▾</a></b>
+            <li id="More"><b><a href="javascript:void(0)">More ▾</a></b>
                 <ul class="dropdown" id="moreDrop">
-                    <li><a href="#">FAQ and Contract info</a></li>
+                    <li><a href="#">Credit</a></li>
                 </ul>
             </li>
-            <li id="ShopAll"><b><a href="#ShopAll">ShopAll</a></b></li>
-            <li id="Categories"><b><a href="#Categories">Categories ▾</a></b>
+            <li id="ShopAll"><b><a href="#ShopAll">All</a></b></li>
+            <li id="Categories"><b><a href="javascript:void(0)">Categories ▾</a></b>
                 <ul class="dropdown" id="categoriesDrop">
-                    <li><a href="#">Classic</a></li>
-                    <li><a href="#">Country</a></li>
-                    <li><a href="#">Jazz</a></li>
-                    <li><a href="#">R&B</a></li>
-                    <li><a href="#">Pop</a></li>
+                    <li><a href="Catagories/classic.html">Classic</a></li>
+                    <li><a href="Catagories/country.html">Country</a></li>
+                    <li><a href="Catagories/jazz.html">Jazz</a></li>
+                    <li><a href="Catagories/rb.html">R&B</a></li>
+                    <li><a href="Catagories/pop.html">Pop</a></li>
                 </ul>
             </li>
-            <li id="New"><b><a href="#New">New</a></b></li>
-            <li id="Menu"><a href="#Menu" onclick="openNav()"><i class="material-icons">&#xe5d2;</i></a></li>
-            <li id="Icon"><a href="#Icon">Icon</a></li>
+            <li id="Menu"><a href="javascript:void(0)" onclick="openNav()"><i class="material-icons">&#xe5d2;</i></a></li>
+            <li id="Icon"><a href="index.html">Thiscordmerch</a></li>
         </ul>
-    </div>
-    <!-- ------------------NavBar---------------------- -->
+        <!-- ------------------End--NavBar----------------- -->
     
-
+    </div>
     <script src="assets/js/createAcc.js"></script>
     <script src="assets/js/NavBar.js"></script>
 </body>
