--- a/cart.html
+++ b/cart.html
@@ -61,8 +61,11 @@
             <li id="Menu"><a href="#Menu" onclick="openNav()"><i class="material-icons">&#xe5d2;</i></a></li>
             <li id="Icon"><a href="#Icon">Icon</a></li>
         </ul>
+        <!-- ------------------NavBar---------------------- -->
+        <div class="cart-container">
+            
+        </div>
     </div>
-    <!-- ------------------NavBar---------------------- -->
     
 
     <script src="assets/js/cart.js"></script>
