Debug-NavBar&Product

--- a/product.html
+++ b/product.html
@@ -24,17 +24,14 @@
 <body>
     <!-- ------------------SideNavBar--------------------- -->
     <ul id="SideNav" class="SideNav" style="width:0;">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Clients</a></li>
         <li id="SideCategories">
             <nobr><a href="javascript:void(0)">Categories ▾</a></nobr>
             <ul class="sideDropdown" id="SideCategoriesDrop">
-                <li><a href="#">Classic</a></li>
-                <li><a href="#">Country</a></li>
-                <li><a href="#">Jazz</a></li>
-                <li><a href="#">R&B</a></li>
-                <li><a href="#">Pop</a></li>
+                <li><a href="Catagories/classic.html">Classic</a></li>
+                <li><a href="Catagories/country.html">Country</a></li>
+                <li><a href="Catagories/jazz.html">Jazz</a></li>
+                <li><a href="Catagories/rb.html">R&B</a></li>
+                <li><a href="Catagories/pop.html">Pop</a></li>
             </ul>
         </li>
         <li><a href="#">All</a></li>
