--- a/login.html
+++ b/login.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thiscordmerch Shop</title>
     <link rel="stylesheet" href="assets/css/NavBar.css">
+    <link rel="stylesheet" href="assets/css/login.css">
     
     <!--Import Bootstrap-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"></script>
     <!--Import Google Icon-->
@@ -72,7 +72,24 @@
             <li id="Icon"><a href="index.html">Thiscordmerch</a></li>
         </ul>
         <!-- ------------------End--NavBar----------------- -->
-
+        <!-- login -->
+        <div class="login text-center mt-5">
+            <h1 class="fw-bold">Login</h1>
+            <hr class="hrOne mx-auto">
+            <form class="form" action="">
+                <input type="text" class="inpEmail rounded-0 mt-4 mb-2 w-25 p-2" name="email" placeholder="Email"><br>
+                <input type="text" class="inpPass rounded-0 mb-2 w-25 p-2" name="password" placeholder="Password"><br>
+                <button class="but rounded-0 mb-4 w-25 p-2">Sign In</button>
+            </form>
+            <div class="fw-normal">
+                <a href="createAcc.html" class="create">Create Account</a>
+            </div>
+            <hr class="hrTwo mx-auto my-0">
+            <div class="fw-normal">
+                <a href="index.html" class="return">Return to Store</a>
+            </div>
+        </div>
+        <!-- end login -->
     </div>
 
     <script src="assets/js/Home.js"></script>
