--- a/login.html
+++ b/login.html
@@ -86,7 +86,7 @@
             </div>
             <hr class="hrTwo mx-auto my-0">
             <div class="fw-normal">
-                <a href="index.html" class="return">Test</a>
+                <a href="index.html" class="return">Return to Store</a>
             </div>
         </div>
         <!-- end login -->
