--- a/Catagories/country.html
+++ b/Catagories/country.html
@@ -26,7 +26,7 @@
         <li id="SideCategories">
             <nobr><a href="javascript:void(0)">Categories ▾</a></nobr>
             <ul class="sideDropdown" id="SideCategoriesDrop">
-                <li><a href="classic.html">Classic</a></li>
+                <li><a href="classic.php">Classic</a></li>
                 <li><a href="country.html">Country</a></li>
                 <li><a href="jazz.html">Jazz</a></li>
                 <li><a href="rb.html">R&B</a></li>
@@ -61,7 +61,7 @@
             <li id="ShopAll"><b><a href="#ShopAll">All</a></b></li>
             <li id="Categories"><b><a href="javascript:void(0)">Categories ▾</a></b>
                 <ul class="dropdown" id="categoriesDrop">
-                    <li><a href="classic.html">Classic</a></li>
+                    <li><a href="classic.php">Classic</a></li>
                     <li><a href="country.html">Country</a></li>
                     <li><a href="jazz.html">Jazz</a></li>
                     <li><a href="rb.html">R&B</a></li>
