--- a/cart.html
+++ b/cart.html
@@ -80,57 +80,57 @@
             <hr class="hr-line2">
             <div class="list-product">
                 <div class="product-container">
-                    <div class="product-1">
-                        <img id="p1" src="assets/images/Product/recordTest.png" alt="product-1">
-                        <h5>Record name</h5>
+                    <div class="product">
+                        <img id="p1" src="assets/images/Product/recordTest.png" alt="product">
+                        <h5 class="record-name">Record name</h5>
                         <div class="product-num">
-                            <span>-</span>
+                            <span class="btn-minus">-</span>
                             <input id="num-p" type="text" value="1">
-                            <span>+</span>
+                            <span class="btn-plus">+</span>
                         </div><br>
                         <h5>$10.00</h5>
                     </div>
 
-                    <div class="product-1">
-                        <img id="p1" src="assets/images/Product/recordTest.png" alt="product-1">
-                        <h5>Record name</h5>
+                    <div class="product">
+                        <img id="p1" src="assets/images/Product/recordTest.png" alt="product">
+                        <h5 class="record-name">Record name</h5>
                         <div class="product-num">
-                            <span>-</span>
+                            <span class="btn-minus">-</span>
                             <input id="num-p" type="text" value="1">
-                            <span>+</span>
+                            <span class="btn-plus">+</span>
                         </div><br>
                         <h5>$10.00</h5>
                     </div>
 
-                    <div class="product-1">
-                        <img id="p1" src="assets/images/Product/recordTest.png" alt="product-1">
-                        <h5>Record name</h5>
+                    <div class="product">
+                        <img id="p1" src="assets/images/Product/recordTest.png" alt="product">
+                        <h5 class="record-name">Record name</h5>
                         <div class="product-num">
-                            <span>-</span>
+                            <span class="btn-minus">-</span>
                             <input id="num-p" type="text" value="1">
-                            <span>+</span>
+                            <span class="btn-plus">+</span>
                         </div><br>
                         <h5>$10.00</h5>
                     </div>
 
-                    <div class="product-1">
-                        <img id="p1" src="assets/images/Product/recordTest.png" alt="product-1">
-                        <h5>Record name</h5>
+                    <div class="product">
+                        <img id="p1" src="assets/images/Product/recordTest.png" alt="product">
+                        <h5 class="record-name">Record name</h5>
                         <div class="product-num">
-                            <span>-</span>
+                            <span class="btn-minus">-</span>
                             <input id="num-p" type="text" value="1">
-                            <span>+</span>
+                            <span class="btn-plus">+</span>
                         </div><br>
                         <h5>$10.00</h5>
                     </div>
                     
-                    <!-- <div class="product-1">
-                        <img id="p1" src="assets/images/Product/recordTest.png" alt="product-1">
-                        <h5>Record name</h5>
+                    <!-- <div class="product">
+                        <img id="p1" src="assets/images/Product/recordTest.png" alt="product">
+                        <h5 class="record-name">Record name</h5>
                         <div class="product-num">
-                            <span>-</span>
+                            <span class="btn-minus">-</span>
                             <input id="num-p" type="text" value="1">
-                            <span>+</span>
+                            <span class="btn-plus">+</span>
                         </div><br>
                         <h5>$10.00</h5>
                     </div> -->
