Fix a href in Navbar and SideNavBar

--- a/product.html
+++ b/product.html
@@ -27,11 +27,12 @@
         <li id="SideCategories">
             <nobr><a href="javascript:void(0)">Categories ▾</a></nobr>
             <ul class="sideDropdown" id="SideCategoriesDrop">
-                <li><a href="Catagories/classic.php">Classic</a></li>
-                <li><a href="Catagories/country.html">Country</a></li>
-                <li><a href="Catagories/jazz.html">Jazz</a></li>
-                <li><a href="Catagories/rb.html">R&B</a></li>
-                <li><a href="Catagories/pop.html">Pop</a></li>
+                <li><a href="catagories.php?ลูกทุ่ง=ลูกทุ่ง">Luktung</a></li>
+                <li><a href="catagories.php?T-POP=T-POP">T-POP</a></li>
+                <li><a href="catagories.php?K-POP=K-POP">K-POP</a></li>
+                <li><a href="catagories.php?Hiphop=Hip+hop">Hip hop</a></li>
+                <li><a href="catagories.php?R%26B=R%26B">R&B</a></li>
+                <li><a href="catagories.php?Jazz=Jazz">Jazz</a></li>
             </ul>
         </li>
         <li><a href="#">All</a></li>
@@ -62,11 +63,12 @@
             <li id="ShopAll"><b><a href="#ShopAll">All</a></b></li>
             <li id="Categories"><b><a href="javascript:void(0)">Categories ▾</a></b>
                 <ul class="dropdown" id="categoriesDrop">
-                    <li><a href="Catagories/classic.php">Classic</a></li>
-                    <li><a href="Catagories/country.html">Country</a></li>
-                    <li><a href="Catagories/jazz.html">Jazz</a></li>
-                    <li><a href="Catagories/rb.html">R&B</a></li>
-                    <li><a href="Catagories/pop.html">Pop</a></li>
+                    <li><a href="catagories.php?ลูกทุ่ง=ลูกทุ่ง">Luktung</a></li>
+                    <li><a href="catagories.php?T-POP=T-POP">T-POP</a></li>
+                    <li><a href="catagories.php?K-POP=K-POP">K-POP</a></li>
+                    <li><a href="catagories.php?Hiphop=Hip+hop">Hip hop</a></li>
+                    <li><a href="catagories.php?R%26B=R%26B">R&B</a></li>
+                    <li><a href="catagories.php?Jazz=Jazz">Jazz</a></li>
                 </ul>
             </li>
             <li id="Menu"><a href="javascript:void(0)" onclick="openNav()"><i class="material-icons">&#xe5d2;</i></a></li>
