--- a/createAcc.html
+++ b/createAcc.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thiscordmerch Shop</title>
+    <title>Create Account</title>
     <link rel="stylesheet" href="assets/css/NavBar.css">
-    <link rel="stylesheet" href="assets/css/createAcc.css">
     <!--Import Bootstrap-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">    
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"></script>
@@ -18,6 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/createAcc.css">
 </head>
 
 <body>
@@ -74,6 +74,26 @@
             <li id="Icon"><a href="index.html">Thiscordmerch</a></li>
         </ul>
         <!-- ------------------End--NavBar----------------- -->
+        <!-- Create Account -->
+        <div class="login text-center mt-5">
+            <h1 class="fw-bold">Create Account</h1>
+            <hr class="hrOne mx-auto">
+            <form class="form" action="">
+                <input type="text" class="inpFname rounded-0 mt-4 mb-2 w-25 p-2" name="fname" placeholder="First Name"><br>
+                <input type="text" class="inpLname rounded-0 mb-2 w-25 p-2" name="lname" placeholder="Last Name"><br>
+                <input type="text" class="inpEmail rounded-0 mb-2 w-25 p-2" name="email" placeholder="Email"><br>
+                <input type="password" class="inpPass rounded-0 mb-2 w-25 p-2" name="password" placeholder="Password"><br>
+                <input type="password" class="inpPass rounded-0 mb-2 w-25 p-2" name="password" placeholder="Comfirm Password"><br>
+                <button class="but rounded-0 mb-4 w-25 p-2">Create</button>
+            </form>
+            <!-- <hr class="hrTwo mx-auto my-0"> -->
+            <div class="fw-normal">
+                <a href="index.html" class="return">Return to Store</a>
+            </div>
+            <hr class="hrOne mx-auto">
+        </div>
+        <!-- end create account -->
+
     
     </div>
     <script src="assets/js/createAcc.js"></script>
