--- a/login.html
+++ b/login.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thiscordmerch Shop</title>
+    <title>Log in</title>
     <link rel="stylesheet" href="assets/css/NavBar.css">
-    <link rel="stylesheet" href="assets/css/login.css">
     
     <!--Import Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
@@ -18,6 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/login.css">
 </head>
 
 <body>
@@ -80,7 +80,7 @@
             <hr class="hrOne mx-auto">
             <form class="form" action="">
                 <input type="text" class="inpEmail rounded-0 mt-4 mb-2 w-25 p-2" name="email" placeholder="Email"><br>
-                <input type="text" class="inpPass rounded-0 mb-2 w-25 p-2" name="password" placeholder="Password"><br>
+                <input type="password" class="inpPass rounded-0 mb-2 w-25 p-2" name="password" placeholder="Password"><br>
                 <button class="but rounded-0 mb-4 w-25 p-2">Sign In</button>
             </form>
             <div class="fw-normal">
