--- a/cart.html
+++ b/cart.html
@@ -26,10 +26,10 @@
         <li id="SideCategories">
             <nobr><a href="javascript:void(0)">Categories ▾</a></nobr>
             <ul class="sideDropdown" id="SideCategoriesDrop">
-                <li><a href="catagories.php?ลูกทุ่ง=ลูกทุ่ง">Luktung</a></li>
+                <li><a href="catagories.php?Luktung=Luktung">Luktung</a></li>
                 <li><a href="catagories.php?T-POP=T-POP">T-POP</a></li>
                 <li><a href="catagories.php?K-POP=K-POP">K-POP</a></li>
-                <li><a href="catagories.php?Hiphop=Hip+hop">Hip hop</a></li>
+                <li><a href="catagories.php?HIP-HOP=HIP-HOP">Hip hop</a></li>
                 <li><a href="catagories.php?R%26B=R%26B">R&B</a></li>
                 <li><a href="catagories.php?Jazz=Jazz">Jazz</a></li>
             </ul>
@@ -48,6 +48,7 @@
 
     <div id="main">
         <!-- ------------------NavBar---------------------- -->
+        <div style="background-color: lightgray;">
         <ul class="NavigationBar">
             <li id="Cart"><a href="cart.html">
                     <i class="material-icons">shopping_cart</i>
@@ -62,10 +63,10 @@
             <li id="ShopAll"><b><a href="#ShopAll">All</a></b></li>
             <li id="Categories"><b><a href="javascript:void(0)">Categories ▾</a></b>
                 <ul class="dropdown" id="categoriesDrop">
-                    <li><a href="catagories.php?ลูกทุ่ง=ลูกทุ่ง">Luktung</a></li>
+                    <li><a href="catagories.php?Luktung=Luktung">Luktung</a></li>
                     <li><a href="catagories.php?T-POP=T-POP">T-POP</a></li>
                     <li><a href="catagories.php?K-POP=K-POP">K-POP</a></li>
-                    <li><a href="catagories.php?Hiphop=Hip+hop">Hip hop</a></li>
+                    <li><a href="catagories.php?HIP-HOP=HIP-HOP">Hip hop</a></li>
                     <li><a href="catagories.php?R%26B=R%26B">R&B</a></li>
                     <li><a href="catagories.php?Jazz=Jazz">Jazz</a></li>
                 </ul>
@@ -73,6 +74,7 @@
             <li id="Menu"><a href="javascript:void(0)" onclick="openNav()"><i class="material-icons">&#xe5d2;</i></a></li>
             <li id="Icon"><a href="index.html">Thiscordmerch</a></li>
         </ul>
+        </div>
         <!-- ------------------End--NavBar----------------- -->
         <div class="cart-container">
             <div class="header">
