--- a/cart.html
+++ b/cart.html
@@ -124,7 +124,7 @@
                         <h5>$10.00</h5>
                     </div>
                     
-                    <!-- <div class="product">
+                    <div class="product">
                         <img id="p1" src="assets/images/Product/recordTest.png" alt="product">
                         <h5 class="record-name">Record name</h5>
                         <div class="product-num">
@@ -133,7 +133,7 @@
                             <span class="btn-plus">+</span>
                         </div><br>
                         <h5>$10.00</h5>
-                    </div> -->
+                    </div>
                 </div>
             </div>
             <hr class="hr-line2">
