Update home nid1

--- a/index.html
+++ b/index.html
@@ -128,36 +128,48 @@
             <h1 class="fw-bold">Music genre</h1>
             <div class="row Genre mx-auto">
                 <div class="col-md-2 col-sm-4 col-6">
-                    <div class="GenreList mx-auto">
-                        Luktung
-                    </div>
+                    <a href="catagories.php?Luktung=Luktung">
+                        <div class="GenreList mx-auto">
+                            Luktung
+                        </div>
+                    </a>
                 </div>
                 <div class="col-md-2 col-sm-4 col-6">
-                    <div class="GenreList mx-auto">
-                        T-POP
-                    </div>
+                    <a href="catagories.php?T-POP=T-POP">
+                        <div class="GenreList mx-auto">
+                            T-POP
+                        </div>
+                    </a>
                 </div>
                 <div class="col-md-2 col-sm-4 col-6">
-                    <div class="GenreList mx-auto">
-                        K-POP
-                    </div>
+                    <a href="catagories.php?K-POP=K-POP">
+                        <div class="GenreList mx-auto">
+                            K-POP
+                        </div>
+                    </a>
                 </div>
                 <div class="col-md-2 col-sm-4 col-6">
-                    <div class="GenreList mx-auto">
-                        HIP-HOP
-                    </div>
+                    <a href="catagories.php?HIP-HOP=HIP-HOP">
+                        <div class="GenreList mx-auto">
+                            HIP-HOP
+                        </div>
+                    </a>
                 </div>
                 <div class="col-md-2 col-sm-4 col-6">
-                    <div class="GenreList mx-auto">
-                        R&B
-                    </div>
+                    <a href="catagories.php?R%26B=R%26B">
+                        <div class="GenreList mx-auto">
+                            R&B
+                        </div>
+                    </a>
                 </div>
                 <div class="col-md-2 col-sm-4 col-6">
-                    <div class="GenreList mx-auto">
-                        JAZZ
-                    </div>
+                    <a href="catagories.php?Jazz=Jazz">
+                        <div class="GenreList mx-auto">
+                            JAZZ
+                        </div>
+                    </a>
                 </div>
-                
+
             </div>
             <!-- Recommend -->
             <h1 class="fw-bold mb-5">Recommend</h1>
