--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Mitr&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Mitr&family=Noto+Sans+KR:wght@500&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="assets/css/Home.css">
 </head>
@@ -126,6 +126,7 @@
         <!-- end carousel -->
         <div class="Main">
             <h1 class="fw-bold">Music genre</h1>
+            <hr class="mx-auto">
             <div class="row Genre mx-auto">
                 <div class="col-md-2 col-sm-4 col-6">
                     <a href="catagories.php?Luktung=Luktung">
@@ -172,8 +173,9 @@
 
             </div>
             <!-- Recommend -->
-            <h1 class="fw-bold mb-5">Recommend</h1>
-            <div class="w-75 mx-auto">
+            <h1 class="fw-bold">Recommend</h1>
+            <hr class="mx-auto">
+            <div class="w-75 mt-5 mx-auto">
                 <div class="row Recommend1 mb-5">
                     <div class="col-lg-6 col-sm-12 music">
                         <img src="https://cdn.discordapp.com/attachments/882306005772427284/1035192566485876786/easily.jpg"
