linkPage & BtnColorCatago & SizePicProduct

--- a/product.html
+++ b/product.html
@@ -41,7 +41,7 @@
                 <li><a href="#">Credit</a></li>
             </ul>
         </li>
-        <li><a href="#account">Account</a></li>
+        <li><a href="login.html">Account</a></li>
         <li><a href="cart.html">Cart</a></li>
         <li><a href="javascript:closeNav()">Close</a></li>
     </ul>
@@ -51,9 +51,9 @@
         <!-- ------------------NavBar---------------------- -->
         <div style="background-color: lightgray;">
         <ul class="NavigationBar">
-            <li id="Cart"><a href="#cart">
+            <li id="Cart"><a href="cart.html">
                     <i class="material-icons">shopping_cart</i>
-            <li id="Account"><a href="#account">
+            <li id="Account"><a href="login.html">
                     <i class="material-icons">person</i>
                 </a></li>
             <li id="More"><b><a href="javascript:void(0)">More ▾</a></b>
@@ -81,7 +81,7 @@
         <div class="product-container">
             <div class="pic-product">
                 <div class="img-container">
-                    <img id="pic-record" src="" alt="name_record">
+                    <img id="pic-record" src="" alt="name_record" style='width:75vh;height:50vh;'>
                     <svg id="btn-p" onclick="musicOn()" width="22%" height="23%" viewBox="0 0 130 132" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <ellipse cx="65" cy="66" rx="65" ry="66" fill="#5964F2"/>
                         <path d="M99 66L48.75 98.909L48.75 33.091L99 66Z" fill="white"/>
