--- a/product.html
+++ b/product.html
@@ -81,7 +81,7 @@
         <div class="product-container">
             <div class="pic-product">
                 <div class="img-container">
-                    <img id="pic-record" src="" alt="name_record" style='width:75vh;height:50vh;'>
+                    <img id="pic-record" src="" alt="name_record" style='width:60%;margin-left: 15%;'>
                     <svg id="btn-p" onclick="musicOn()" width="22%" height="23%" viewBox="0 0 130 132" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <ellipse cx="65" cy="66" rx="65" ry="66" fill="#5964F2"/>
                         <path d="M99 66L48.75 98.909L48.75 33.091L99 66Z" fill="white"/>
