Update index images

--- a/index.html
+++ b/index.html
@@ -98,16 +98,16 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="https://cdn.discordapp.com/attachments/882306005772427284/1033255028716212295/lop-eared-314881_1280.jpg"
-                        class="d-block w-100" alt="...">
+                    <img src="assets/images/Home/Carousel1.png"
+                        class="d-block w-100" alt="Carousel1">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://cdn.discordapp.com/attachments/882306005772427284/1033255030851108914/pablo-martinez-AdagxtVKRWE-unsplash.jpg"
-                        class="d-block w-100" alt="...">
+                    <img src="assets/images/Home/Carousel2.png"
+                        class="d-block w-100" alt="Carousel2">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://cdn.discordapp.com/attachments/882306005772427284/1033255049410908220/janan-lagerwall-p2UbTX6Uoig-unsplash.jpg"
-                        class="d-block w-100" alt="...">
+                    <img src="assets/images/Home/Carousel3.png"
+                        class="d-block w-100" alt="Carousel3">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
