Change Index Picture and Add Credit Page

--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
         </li>
         <li id="SideMore"><nobr><a href="javascript:void(0)">More ▾</a></nobr>
             <ul class="sideDropdown" id="SideMoreDrop">
-                <li><a href="#">Credit</a></li>
+                <li><a href="credit.html">Credit</a></li>
             </ul>
         </li>
         <li><a href="login.html">Account</a></li>
@@ -58,7 +58,7 @@
                 </a></li>
             <li id="More"><b><a href="javascript:void(0)">More ▾</a></b>
                 <ul class="dropdown" id="moreDrop">
-                    <li><a href="#">Credit</a></li>
+                    <li><a href="credit.html">Credit</a></li>
                 </ul>
             </li>
             <li id="Categories"><b><a href="javascript:void(0)">Categories ▾</a></b>
@@ -86,7 +86,7 @@
                 <button type="button" id="btn" class="but rounded-0 mb-4 w-25 p-2" onclick="checkIn()">Sign In</button>
             </form>
             <div class="fw-normal">
-                <a href="createAcc.php" class="create">Create Account</a>
+                <a href="createAcc.html" class="create">Create Account</a>
             </div>
             <hr class="hrTwo mx-auto my-0">
             <div class="fw-normal">
@@ -117,7 +117,9 @@
                 </div>
                 <div class="col-6 col-sm-6 col-md-3">
                     <div><h5><b>More</b></h5></div>
-                    <div><a href="catagories.php?Luktung=Luktung" style="text-decoration: none; color:#353535;">Credit</a></div>
+                    <div><a href="credit.html" style="text-decoration: none; color:#353535;">Credit</a></div>
+                    <div><a href="#" style="text-decoration: none; color:#353535;">Account</a></div>
+                    <div><a href="cart.html" style="text-decoration: none; color:#353535;">Cart</a></div>
                 </div>
             </div>
             <div style="text-align: center; padding-top:30px;">
@@ -127,7 +129,6 @@
 
     </div>
 
-    <script src="assets/js/Home.js"></script>
     <script src="assets/js/NavBar.js"></script>
     <script src="assets/js/login.js"></script>
 </body>
