--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <li id="SideMore">
             <nobr><a href="javascript:void(0)">More ▾</a></nobr>
             <ul class="sideDropdown" id="SideMoreDrop">
-                <li><a href="#">Credit</a></li>
+                <li><a href="credit.html">Credit</a></li>
             </ul>
         </li>
         <li><a href="login.html">Account</a></li>
@@ -62,7 +62,7 @@
                     </a></li>
                 <li id="More"><b><a href="javascript:void(0)">More ▾</a></b>
                     <ul class="dropdown" id="moreDrop">
-                        <li><a href="#">Credit</a></li>
+                        <li><a href="credit.html">Credit</a></li>
                     </ul>
                 </li>
                 <li id="Categories"><b><a href="javascript:void(0)">Categories ▾</a></b>
@@ -98,15 +98,15 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="assets/images/Home/Carousel1.png"
+                    <img src="assets/images/Home/Carousel1.jpg"
                         class="d-block w-100" alt="Carousel1">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/images/Home/Carousel2.png"
+                    <img src="assets/images/Home/Carousel2.jpg"
                         class="d-block w-100" alt="Carousel2">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/images/Home/Carousel3.png"
+                    <img src="assets/images/Home/Carousel3.jpg"
                         class="d-block w-100" alt="Carousel3">
                 </div>
             </div>
@@ -276,7 +276,9 @@
                 </div>
                 <div class="col-6 col-sm-6 col-md-3">
                     <div><h5><b>More</b></h5></div>
-                    <div><a href="catagories.php?Luktung=Luktung" style="text-decoration: none; color:#353535;">Credit</a></div>
+                    <div><a href="credit.html" style="text-decoration: none; color:#353535;">Credit</a></div>
+                    <div><a href="#" style="text-decoration: none; color:#353535;">Account</a></div>
+                    <div><a href="cart.html" style="text-decoration: none; color:#353535;">Cart</a></div>
                 </div>
             </div>
             <div style="text-align: center; padding-top:30px;">
@@ -286,8 +288,6 @@
 
     </div>
     <!-- </div> -->
-
-    <script src="assets/js/Home.js"></script>
     <script src="assets/js/NavBar.js"></script>
 </body>
 
