Remove JS from credit body

--- a/credit.html
+++ b/credit.html
@@ -22,7 +22,7 @@
     <link rel="icon" href="assets/images/Home/record.png">
 </head>
 
-<body onload="getProduct()">
+<body>
     <!-- ------------------SideNavBar--------------------- -->
     <ul id="SideNav" class="SideNav" style="width:0;">
         <li id="SideCategories">
