Merge-2 BackEnd Cart NotFinish

--- a/cart.html
+++ b/cart.html
@@ -76,7 +76,7 @@
         </ul>
         </div>
         <!-- ------------------End--NavBar----------------- -->
-        <div class="cart-container">
+        <div id="cart-container" class="cart-container">
             <div class="header">
                 <h2><b>Your cart</b></h2>
                 <hr class="hr-line1">
@@ -84,7 +84,7 @@
             <hr class="hr-line2">
             <div class="list-product">
                 <div id="order-product" class="product-container">
-                    <div class="product">
+                    <!-- <div class="product">
                         <img id="p1" src="assets/images/Product/recordTest.png" alt="product">
                         <h5 class="record-name">Record name</h5>
                         <div class="product-num">
@@ -93,18 +93,8 @@
                             <span class="btn-plus">+</span>
                         </div><br>
                         <h5>$10.00</h5>
-                    </div>
+                    </div> -->
 
-                    <div class="product">
-                        <img id="p1" src="assets/images/Product/recordTest.png" alt="product">
-                        <h5 class="record-name">Record name</h5>
-                        <div class="product-num">
-                            <span class="btn-minus">-</span>
-                            <input id="num-p" type="text" value="1">
-                            <span class="btn-plus">+</span>
-                        </div><br>
-                        <h5>$10.00</h5>
-                    </div>
 
                     
                 </div>
@@ -165,7 +155,7 @@
         </footer>
 
     </div>
-    <script src="assets/js/cart.js"></script>
+    <script src="assets/js/cart.js?v=2"></script>
     <script src="assets/js/NavBar.js"></script>
 </body>
 
