--- a/product.html
+++ b/product.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thiscordmerch Shop</title>
     <link rel="stylesheet" href="assets/css/NavBar.css">
-    <link rel="stylesheet" href="assets/css/product.css?v=1">
+    <link rel="stylesheet" href="assets/css/product.css?v=2">
     <!--Import Bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
@@ -93,7 +93,9 @@
                 <h4 style="padding-top: 3%;">$ 10.00</h4>
                 <p style="padding-top: 1%;"><b>Description:&nbsp;&nbsp;</b><span id="content-des"></span></p>
                 <div class="addProduct-container">
-                    <button onclick="addProduct()" id="btn-addProduct">Add to Cart</button>
+                    <a onclick="addProduct()" href="cart.html" id="btn-addProduct">
+                        <center style="margin-top: 13px;">Add to Cart</center>
+                    </a>
                 </div>
             </div>
             
@@ -134,7 +136,7 @@
     
 
     <script  type="text/javascript" src="assets/js/product.js"></script>
-    <script  type="text/javascript" src="assets/js/cart.js?v=1"></script>
+    <script  type="text/javascript" src="assets/js/cart.js?v=2"></script>
     <script  type="text/javascript" src="assets/js/NavBar.js"></script>
 </body>
 </html>
