Add artist to product page.

--- a/product.html
+++ b/product.html
@@ -93,7 +93,8 @@
             <div class="info-product">
                 <h1><b id="name-product">Record Product Name</b></h1>
                 <h4 style="padding-top: 3%;">$ 10.00</h4>
-                <p style="padding-top: 1%;"><b>Description:&nbsp;&nbsp;</b><span id="content-des"></span></p>
+                <p style="padding-top: 1%; margin:0;"><b>Artist:&nbsp;&nbsp;</b><span id="content-artist"></span></p>
+                <p style="padding-top: 1%; margin:0;"><b>Description:&nbsp;&nbsp;</b><span id="content-des"></span></p>
                 <div class="addProduct-container">
                     <button onclick="addProduct()" id="btn-addProduct">Add to Cart</button>
                 </div>
